adjust media query width for the overflow-x to be more responsive, fixed the week-cursors to a better position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,6 +499,10 @@ body {
     padding-right: 30px;
 }
 
+.weel-cursor {
+    max-width: 1200px;
+}
+
 .week-cursor a{
     text-decoration: none;
     color: #595959;
@@ -573,6 +577,8 @@ td p:hover{
         padding-left: 20%;
         padding-right: 20%;
     }
+    .table{
+        overflow-x: auto;}
 }
 
 @media screen and (min-width:820px) and (max-width:912px){
@@ -584,8 +590,6 @@ td p:hover{
 @media screen and (max-width:820px){
     .hero {
         height: 50vh;}
-    .table{
-        overflow-x: auto;}
     .contact-details .hidden {
         display: none;
     }
